# game_webserver

./: .gitignore  .gitmodules  API_functions.txt  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  add_dependency.sh  build.sh  build_no_tests.sh  build_with_tests.sh  conanfile.txt  copy_executables.sh  init.lua  redis.conf  remove_executables.sh  run.sh  run_tests.sh  test.sh  uml_diagrams.md  vcpkg.json
.obsidian/: appearance.json  bookmarks.json  templates.json  workspace.json
Obsidian Vault/: database table users with user info.md  dependencies.canvas  hex_chess - matchmaking_queue.md  hex_chess - users.md  main.canvas
docs/: API_functions_txt.md  CLI parameters to executable.md  bash_scripts.md  center_text.css  database sql tables.md  database_manager.md  docker.md  event_list.md  game player moving.md  game_manager.md  game_rules.md  http_api.md  http_handler.md  initializer.md  install_deps.md  matchmaking_system.md  neovim_config.md  new_module_creation.md  notification_system.md  postgresql_tables.md  queue_manager.md  serializer.md  server.md  session_manager.md  session_state.md  tables for db.txt  tests.md  token_manager.md  user_data.md  (+1 more)
src/: CMakeLists.txt  main.cpp
src/connection_pool/: CMakeLists.txt  postgres_connection_pool.cpp  postgres_connection_pool.hpp
src/database_manager/: CMakeLists.txt  i_user_data_manager.hpp  postgres_connection_pool.cpp  postgres_connection_pool.hpp  postgres_data_conversion.hpp  registration_data.hpp  token.hpp  token_generator.cpp  token_generator.hpp  token_to_uuid.cpp  token_to_uuid.hpp  user_data.hpp  user_data_manager_postgres.cpp  user_data_postgres.cpp  user_data_postgres.hpp  user_data_types.hpp
src/game_manager/: CMakeLists.txt  actor_id.hpp  bomb.cpp  bomb.hpp  bullet.cpp  bullet.hpp  const_variables.hpp  custom_events.cpp  custom_events.hpp  directed_object.hpp  direction.hpp  event.hpp  event_manager.cpp  event_manager.hpp  game_api_status.hpp  game_manager.cpp  game_manager.hpp  gun.cpp  gun.hpp  i_actor.hpp  i_interaction_api.hpp  i_move_api.hpp  i_placeable.hpp  i_shootable.hpp  i_state.hpp  i_state_related.hpp  interaction_event.hpp  matchmaking_balancer.cpp  matchmaking_balancer.hpp  move_data.hpp  new_dir_object_event.hpp  new_object_event.hpp  object.cpp  object.hpp  object_directed.hpp  object_placed.hpp  obstacle.hpp  player.cpp  player.hpp  position.hpp  (+16 more)
src/http_handler/: CMakeLists.txt  api_function.cpp  api_function.hpp  api_function_builder.cpp  api_function_builder.hpp  api_function_director.cpp  api_function_director.hpp  api_function_executor.cpp  api_function_executor.hpp  api_function_params.hpp  api_handler.cpp  api_handler.hpp  debug_handler.cpp  debug_handler.hpp  game_handler.cpp  game_handler.hpp  general_handler.cpp  general_handler.hpp  get_token_from_header.cpp  get_token_from_header.hpp  handler_parameters.hpp  http_handler.cpp  http_handler.hpp  http_types.hpp  public_user.hpp  public_user_data.hpp  registration_data.cpp  registration_data.hpp  response_builder.hpp  response_maker.cpp  response_maker.hpp  response_sender.hpp  send_manager.cpp  send_manager.hpp  send_manager_gm.hpp  send_manager_http.hpp  send_manager_sm.hpp  send_manager_tm.hpp  send_manager_um.hpp  static_handler.cpp  (+1 more)
src/initializer/: CMakeLists.txt  initializer.cpp  initializer.hpp
src/matchmaking_system/: CMakeLists.txt  i_queue_manager.hpp  matchmaking_balancer.cpp  matchmaking_balancer.hpp  matchmaking_ballancer.cpp  matchmaking_ballancer.hpp  mm_queue.cpp  mm_queue.hpp  queue_manager_redis.cpp  queue_manager_redis.hpp
src/notification_system/: CMakeLists.txt  network_notifier.cpp  network_notifier.hpp  queue_notifier.cpp  queue_notifier.hpp  session_state_notifier.cpp  session_state_notifier.hpp  thread_lock.hpp
src/psql_connection_pool/: CMakeLists.txt  postgres_connection_pool.cpp  postgres_connection_pool.hpp
src/queue_manager/: CMakeLists.txt  i_queue_manager.hpp  queue_manager_redis.cpp  queue_manager_redis.hpp
src/serializer/: CMakeLists.txt  i_serializer.hpp  json_serializer.cpp  json_serializer.hpp  json_type_converter.hpp  serializer.cpp  serializer_basic.hpp  serializer_game.hpp  serializer_http.hpp  serializer_session.hpp  serializer_user.hpp  type_serializer.cpp  type_serializer.hpp
src/server/: CMakeLists.txt  beast_typedefs.hpp  http_server.cpp  http_server.hpp  listener.cpp  listener.hpp  network_notifier.cpp  network_notifier.hpp  session.cpp  session.hpp  session_base.cpp  session_base.hpp
src/session_manager/: CMakeLists.txt  i_session_manager.hpp  postgres_session_conversion.hpp  session_data.hpp  session_manager_postgres.cpp  session_manager_postgres.hpp
src/token_manager/: CMakeLists.txt  i_token_manager.hpp  token.hpp  token_generator.cpp  token_generator.hpp  token_manager_redis.cpp  token_manager_redis.hpp  token_to_uuid.cpp  token_to_uuid.hpp
src/user_data/: CMakeLists.txt  player_data.hpp  players.cpp  players.hpp  registration_data.hpp
src/user_manager/: CMakeLists.txt  i_user_manager.hpp  postgres_connection_pool.cpp  postgres_connection_pool.hpp  postgres_data_conversion.hpp  user.hpp  user_manager_postgres.cpp  user_manager_postgres.hpp  user_types.hpp
src/vt_game_structs/: CMakeLists.txt  bomb.cpp  bullet.cpp  directed_object.cpp  event.cpp  gun.cpp  object.cpp  object_directed.cpp  object_placed.cpp
tests/: CMakeLists.txt  api_functions.cpp  api_functions.hpp  default_api_test.cpp  http_functions.cpp  http_functions.hpp  nick_generator.hpp  socket_functions.cpp  socket_functions.hpp  test.cpp  test_api_enqueue.cpp  test_api_game_enqueue.cpp  test_api_game_move.cpp  test_api_game_place_bomb.cpp  test_api_game_place_gun.cpp  test_api_game_resign.cpp  test_api_game_session_state.cpp  test_api_game_session_state_change.cpp  test_api_game_wait_for_opponent.cpp  test_api_game_walk.cpp  test_api_login.cpp  test_api_mm_queue.cpp  test_api_player_tokens.cpp  test_api_profile.cpp  test_api_register.cpp  test_api_set_state.cpp  test_api_test.cpp  test_api_user.cpp  test_api_user_data.cpp  test_jsonserializer.cpp  test_set_url_parameters.cpp
(+46 files in other folders)
